[package]
name = "enquote"
version = "1.0.3"
authors = ["reujab <reujab@gmail.com>"]
description = "Quotes and unquotes strings"
repository = "https://github.com/reujab/enquote"
readme = "readme.md"
keywords = ["quote", "enquote", "unquote"]
categories = ["parser-implementations", "parsing", "value-formatting"]
license = "Unlicense"

[dependencies]
